--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			<header>
 				<h2>Hey.</h2>
 			</header>
-			<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-				and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+			<p>Bem vindo a <strong>Photo Template</strong> um site responsivo criado por <a href="https://html5up.net">braguinha</a><br />
+				e disposto gratis por <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
 			<footer>
 				<a href="#one" class="button style2 down">More</a>
 			</footer>
@@ -51,7 +51,7 @@
 		<a href="#two" class="button style2 down anchored">Next</a>
 	</section>
 
-	
+
 	<section id="two" class="main style2 left dark fullscreen">
 		<div class="content box style2">
 			<header>
