--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
 	<!-- Header -->
 	<header id="header">
-		<h1>Pedro Braga</h1>
-		<nav>
-			<ul>
-				<li><a href="#intro">Introdução</a></li>
-				<li><a href="#o-que-faco">O que eu faço</a></li>
-				<li><a href="#quem-sou">Quem sou eu?</a></li>
-				<li><a href="#trabalhos">Trabalhos</a></li>
-				<li><a href="#contato">Contato</a></li>
-			</ul>
-		</nav>
+		<h1>Pedro Bragah1>
+			<nav>
+				<ul>
+					<li><a href="#intro">Introdução</a></li>
+					<li><a href="#o-que-faco">O que eu faço</a></li>
+					<li><a href="#quem-sou">Quem sou eu?</a></li>
+					<li><a href="#trabalhos">Trabalhos</a></li>
+					<li><a href="#contato">Contato</a></li>
+				</ul>
+			</nav>
 	</header>
 
 	<!-- Intro -->
