--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 	<section id="intro" class="main style1 dark fullscreen">
 		<div class="content">
 			<header>
-				<h2>Hey.</h2>
+				<h2>Olá</h2>
 			</header>
-			<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-				and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+			<p>Bem vindo ao <strong>Meu site</strong> criado por mim <a href="https://html5up.net">Pedror</a>
 			<footer>
 				<a href="#one" class="button style2 down">More</a>
 			</footer>
@@ -45,11 +44,9 @@
 	<section id="one" class="main style2 right dark fullscreen">
 		<div class="content box style2">
 			<header>
-				<h2>What I Do</h2>
+				<h2>O que eu faço</h2>
 			</header>
-			<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-				Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-				id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+			<p>Nada de nada</p>
 		</div>
 		<a href="#two" class="button style2 down anchored">Next</a>
 	</section>
