--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<h1>Pedregulho Bagulho</h1>
+		<h1>Pedregulinho</h1>
 		<nav>
 			<ul>
 				<li><a href="#intro">Introdução</a></li>
